--- a/index/template.tex
+++ b/index/template.tex
@@ -31,7 +31,17 @@
 \newcommand{\elandscape}{\end{landscape}}
 
 %% Paramaters for global document
-\hypersetup{colorlinks = false}
+
+\hypersetup{%
+  colorlinks=true,% hyperlinks will be coloured
+  linkcolor=red,
+  anchorcolor=black,
+  citecolor=green,
+  filecolor=cyan,
+  menucolor=red,
+  runcolor=cyan,
+  urlcolor=magenta
+}
 \renewcommand{\UrlBreaks}{\do\/\do\a\do\b\do\c\do\d\do\e\do\f\do\g\do\h\do\i\do\j\do\k\do\l\do\m\do\n\do\o\do\p\do\q\do\r\do\s\do\t\do\u\do\v\do\w\do\x\do\y\do\z\do\A\do\B\do\C\do\D\do\E\do\F\do\G\do\H\do\I\do\J\do\K\do\L\do\M\do\N\do\O\do\P\do\Q\do\R\do\S\do\T\do\U\do\V\do\W\do\X\do\Y\do\Z\do\0\do\1\do\2\do\3\do\4\do\5\do\6\do\7\do\8\do\9\do\%\do\.\do\-}
 \renewcommand{\chapterautorefname}{Chapter}
 \usepackage{times} % other fonts are available like times, bookman, charter, palatino
